# pdf-parsers

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  utils.py
src/parsers/: base.py  docling.py  got_ocr.py  llamaparse.py  llmsherpa.py  marker.py  markitdown.py  nougat.py  pdfminer.py  pdfplumber.py  pdftext.py  pymupdf4llm.py  pymypdf.py  pypdf.py  pypdfium2.py  unstructured.py
