[tool.poetry]
name = "pdf-parsers"
version = "0.1.0"
description = ""
authors = ["Oskar Liew <oskar@liew.se>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "~3.11.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.46.3"
tiktoken = "^0.8.0"
verovio = "^4.4.0"
accelerate = "^1.1.1"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.poetry.group.parsers.dependencies]
docling = "^2.8.1"
pypdf = "^5.1.0"
pymupdf = "^1.24.14"
pymupdf4llm = "^0.0.17"
pdfminer = "^20191125"
pdfplumber = "^0.11.4"
llmsherpa = "^0.1.4"
unstructured = {version = "^0.16.9", extras = ["all-docs"]}
marker-pdf = "^1.0.1"
nougat-ocr = "^0.1.17"
pypdfium2 = "^4.30.0"
pdftext = "^0.3.19"
llama-parse = "^0.5.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

